# convergence

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  btca.config.jsonc  effigy.toml  package.json
docs/: README.md
docs/architecture/: 01-concepts-and-object-model.md  02-repo-gates-lanes-scopes.md  03-operations-and-semantics.md  04-superpositions-and-resolution.md  05-policy-model-and-phase-gates.md  06-storage-and-data-model.md  07-client-workspace-architecture.md  08-server-authority-architecture.md  09-security-identity-and-permissions.md  10-cli-and-tui.md  11-interop-and-migration.md  12-gate-graph-schema.md  README.md  product-guardrails.md
docs/contracts/: 001-working-rules.md
docs/decisions/: 2026-01-22-155954-convergence-gates-phases.md
docs/git-podcast/: README.md  The Real Problems w Git.txt  design-directions.md  key-points-and-arguments.md  problem-analysis.md  (+1 more)
scripts/: run-tests.js
src/: cli_exec.rs  cli_runtime.rs  diff.rs  lib.rs  main.rs  model.rs  remote.rs  resolve.rs  store.rs  tui.rs  tui_remote_legacy.rs  tui_shell.rs  workspace.rs
tests/: approvals_required.rs  cli_diff.rs  cli_help_surface.rs  cli_remote_gc.rs  cli_remote_gc_prune.rs  e2e_release_fetch_restore.rs  e2e_remote_publish_fetch_restore.rs  local_snap_store.rs  phase3_e2e_bundle_promote_blocked.rs  phase6_e2e_resolve_superpositions.rs  promotion_mechanics.rs  provenance_attribution.rs  release_permissions.rs  server_api_contract.rs  server_bootstrap.rs  server_gc_retention.rs  server_persistence.rs  server_releases.rs  server_tokens.rs  upload_integrity.rs
(+436 files in other folders)
